--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -5,10 +5,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
+  <title>Dr. Ganczer Péter Ortopéd sebész</title>
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -119,107 +123,44 @@
       <small>Subheading</small>
     </h1>
 
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="index.html">Home</a>
-      </li>
-      <li class="breadcrumb-item active">About</li>
-    </ol>
 
-    <!-- Intro Content -->
-    <div class="row">
-      <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="http://placehold.it/750x450" alt="">
-      </div>
-      <div class="col-lg-6">
-        <h2>About Modern Business</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
-      </div>
+
+ <!-- Page Content -->
+ <div class="container">
+  <!-- Intro Content -->
+  <div class="row">
+    <div class="col-lg-6">
+      <img class="img-fluid rounded mb-4" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
     </div>
-    <!-- /.row -->
-
-    <!-- Team Members -->
-    <h2>Our Team</h2>
-
-    <div class="row">
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100 text-center">
-          <img class="card-img-top" src="http://placehold.it/750x450" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Team Member</h4>
-            <h6 class="card-subtitle mb-2 text-muted">Position</h6>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#">name@example.com</a>
-          </div>
-        </div>
-      </div>
+    <div class="col-lg-6">
+      <h2>Csipőfájdalomról</h2>
+      <p>A csípőízületi porckopás (artrózis) gyakori betegség.</p>        
+      <p>Kezdetben csak a reggeli felkelés után érez a beteg fájdalmat, mely mozgásra bejáratódik és enyhül. Később már terhelésre fokozódnak a fájdalmak és állandósulnak egész napra. A fájdalom jelentkezhet a csípőben, a lágyékhajlatban, de felléphet a keresztcsont tájékán és akár a térdbe is lesugározhat. A fájdalom miatt a betegek életvitelükben is akadályozottá válnak, lépcsőn járásnál, vagy a tömegközlekedési eszközre való felszállásnál. Később azonban már egy cipő felhúzása is fájdalmas lehet. </p>
+      <h3>A csípőízületi porckopás kialakulásának okai:</h3>
+      <p>Nem mindig tudjuk pontosan megállapítani, hogy mi váltotta ki a csípőízületi kopást, de számos olyan tényező ismert, mely a porckopást előidézője lehet:</p>
+          <ul>
+            <li>a mozgásszervi túlterhelés</li>
+            <li>autoimmun ízületi gyulladás</li>
+            <li>a túlsúly</li>
+            <li>a túlzásba vitt sportolás</li>
+            <li>csípőízület veleszületett vagy fejlődési zavarai</li>
+            <li>gyerekkori és serdülőkori combfej betegségek</li>
+          </ul>
+        <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás esetén, ha a fent említettek nem hoznak javulást, akkor csípő protézis beültetése javasolt.</p>
     </div>
-    <!-- /.row -->
+  </div>
+  <!-- /.row -->
 
-    <!-- Our Customers -->
-    <h2>Our Customers</h2>
-    <div class="row">
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-      <div class="col-lg-2 col-sm-4 mb-4">
-        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-      </div>
-    </div>
-    <!-- /.row -->
 
+</div>
+<!-- /.container -->
+<!-- Footer -->
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Dr. Ganczer Péter (2020) Powered by Bootstrap</p>
   </div>
   <!-- /.container -->
-
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
