--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -119,10 +119,10 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">About
+    <h1 class="mt-4 mb-3">Csipőfájdalomról
       <small>Subheading</small>
     </h1>
-
+  </div>    
 
 
  <!-- Page Content -->
@@ -153,14 +153,14 @@
 
 
 </div>
-<!-- /.container -->
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Dr. Ganczer Péter (2020) Powered by Bootstrap</p>
-  </div>
   <!-- /.container -->
-</footer>
+  <!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Dr. Ganczer Péter (2020) Powered by Bootstrap</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
