--- a/404.html
+++ b/404.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css2?family=Yesteryear&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Modern Business - Start Bootstrap Template</title>
+  <link rel="shortcut icon" type="image/x-icon" href="pictures/dr-ganczer-favicon.png">
+  <title>Dr. Ganczer Péter Ortopéd sebész</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -22,67 +25,114 @@
 
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">Dr. Ganczer Péter <br> <p class="pozicio"> Ortopéd sebész </p></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="index.html">Kezdőlap</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Portfolio
+              Csipő
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+              <a class="dropdown-item" href="csipofajdalomrol.html">Csipőfájdalomról</a>
+              <a class="dropdown-item" href="izomvagas-nelkul.html">Izomátvágás nélküli, minimál invazív csípőprotézis beültetés</a>
+              <a class="dropdown-item" href="csipomutetek.html">Csípőműtétek</a>
             </div>
           </li>
+
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Blog
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Térd
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="terdfajdalomrol.html">Térdfájdalomról</a>
+              <a class="dropdown-item" href="terd-protezis-beultetes.html">Térd protézis beültetés mini subvastus feltárásból </a>
+              <a class="dropdown-item" href="terd-prozezis.csere.html">Térd protézis csere - revisios </a>
+              <a class="dropdown-item" href="arthroscopos-terd.html">Arthroscopos térd anatómiai keresztszalag pótlás</a>
+              <a class="dropdown-item" href="terd-porcsebészet.html">Térd porcsebészet</a>              
             </div>
           </li>
-          <li class="nav-item active dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
+        
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Váll
             </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item active" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="vallfajdalomrol.html">Vállfájdalomról</a>
+              <a class="dropdown-item" href="arthroscopos-vallsebeszet.html">Arthroscopos vállsebészet (labrum refixatio)</a>
+              <a class="dropdown-item" href="arthroscopos-rotator-kopeny.html">Arthroscopos rotátor köpeny varratműtét</a>
             </div>
           </li>
+
+          <li class="nav-item">
+              <a class="nav-link" href="arak.html">Árak</a>
+          </li>          
+
+          <li class="nav-item">
+            <a class="nav-link" href="kapcsolat.html">Kapcsolat</a>
+          </li>               
+
         </ul>
       </div>
     </div>
   </nav>
+
+  <header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!-- Slide One - Set the background image for this slide in the line below -->
+        <div class="carousel-item active" style="background-image: url('pictures/csipofajdalom.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Csipő</h2>
+            <p>A csipőhöz a legfontosabb kiemelendő rész.</p>
+          </div>
+        </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/terd-szorit.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Térd</h2>
+            <p>A térdhez a legfontosabb kiemelendő rész.</p>
+          </div>
+        </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Váll</h2>
+            <p>A vállhoz a legfontosabb kiemelendő rész.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </header>
+
 
   <!-- Page Content -->
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">404
-      <small>Page Not Found</small>
+      <small>A keresett oldal nem található...</small>
     </h1>
 
     <ol class="breadcrumb">
@@ -94,70 +144,10 @@
 
     <div class="jumbotron">
       <h1 class="display-1">404</h1>
-      <p>The page you're looking for could not be found. Here are some helpful links to get you back on track:</p>
+      <p>Kérem jelezze a problémát a info@drganczer email címen! Köszönöm!</p>
       <ul>
         <li>
           <a href="index.html">Home</a>
-        </li>
-        <li>
-          <a href="about.html">About</a>
-        </li>
-        <li>
-          <a href="services.html">Services</a>
-        </li>
-        <li>
-          <a href="contact.html">Contact</a>
-        </li>
-        <li>
-          Portfolio
-          <ul>
-            <li>
-              <a href="portfolio-1-col.html">1 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-2-col.html">2 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-3-col.html">3 Column Portfolio</a>
-            </li>
-            <li>
-              <a href="portfolio-4-col.html">4 Column Portfolio</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Blog
-          <ul>
-            <li>
-              <a href="blog-home-1.html">Blog Home 1</a>
-            </li>
-            <li>
-              <a href="blog-home-2.html">Blog Home 2</a>
-            </li>
-            <li>
-              <a href="blog-post.html">Blog Post</a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          Other Pages
-          <ul>
-            <li>
-              <a href="full-width-page.html">Full Width Page</a>
-            </li>
-            <li>
-              <a href="sidebar.html">Sidebar Page</a>
-            </li>
-            <li>
-              <a href="faq.html">FAQ</a>
-            </li>
-            <li>
-              <a href="404.html">404 Page</a>
-            </li>
-            <li>
-              <a href="pricing-table.html">Pricing Table</a>
-            </li>
-          </ul>
         </li>
       </ul>
     </div>
@@ -166,10 +156,11 @@
   </div>
   <!-- /.container -->
 
+  <!-- /.container -->
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Dr. Ganczer Péter (2020) Powered by Bootstrap</p>
     </div>
     <!-- /.container -->
   </footer>
