--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -87,29 +87,6 @@
           </li>               
 
 
-
-         <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-              <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-              <a class="dropdown-item" href="blog-post.html">Blog Post</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
-              <a class="dropdown-item" href="full-width.html">Full Width Page</a>
-              <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
-              <a class="dropdown-item" href="faq.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-              <a class="dropdown-item" href="pricing.html">Pricing Table</a>
-            </div>
-          </li> -->
         </ul>
       </div>
     </div>
@@ -131,6 +108,12 @@
   <div class="row">
     <div class="col-lg-6">
       <img class="img-fluid rounded mb-4" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
+      <div>
+        <h2 class="open-hours"> Renelési idő</h2>
+      </div>
+      <div>
+        <h2 class="contact-to-me"> Elérhetőségek:</h2>
+      </div>
     </div>
     <div class="col-lg-6">
       <h2>Csipőfájdalomról</h2>
