--- a/index.html
+++ b/index.html
@@ -98,21 +98,7 @@
         <div class="carousel-item active" style="background-image: url('pictures/csipofajdalom.jpg')">
           <div class="carousel-caption d-none d-md-block">
             <h2>Csipő</h2>
-            <p>A csipőhöz a legfontosabb kiemelendő rész.</p>
-          </div>
-        </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/terd-szorit.jpg')">
-          <div class="carousel-caption d-none d-md-block">
-            <h2>Térd</h2>
-            <p>A térdhez a legfontosabb kiemelendő rész.</p>
-          </div>
-        </div>
-        <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
-          <div class="carousel-caption d-none d-md-block">
-            <h2>Váll</h2>
-            <p>A vállhoz a legfontosabb kiemelendő rész.</p>
+            <p class="slideshow-p"> A csipőhöz a legfontosabb kiemelendő rész.</p>
           </div>
         </div>
       </div>
