--- a/index.html
+++ b/index.html
@@ -101,6 +101,22 @@
             <p class="slideshow-p"> A csipőhöz a legfontosabb kiemelendő rész.</p>
           </div>
         </div>
+        <!-- Slide Two - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/terd-szorit.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Térd</h2>
+            <p class="slideshow-p">A térdhez a legfontosabb kiemelendő rész.</p>
+          </div>
+        </div>
+        <!-- Slide Three - Set the background image for this slide in the line below -->
+        <div class="carousel-item" style="background-image: url('pictures/nyak-kozel.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h2>Váll</h2>
+            <p class="slideshow-p">A vállhoz a legfontosabb kiemelendő rész.</p>
+          </div>
+        </div>
+      </div>        
+
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
