--- a/csipofajdalomrol.html
+++ b/csipofajdalomrol.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -97,7 +98,7 @@
 
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">Csipőfájdalomról
-      <small>Subheading</small>
+      <small></small>
     </h1>
   </div>    
 
@@ -106,17 +107,8 @@
  <div class="container">
   <!-- Intro Content -->
   <div class="row">
+
     <div class="col-lg-6">
-      <img class="img-fluid rounded mb-4" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
-      <div>
-        <h2 class="open-hours"> Renelési idő</h2>
-      </div>
-      <div>
-        <h2 class="contact-to-me"> Elérhetőségek:</h2>
-      </div>
-    </div>
-    <div class="col-lg-6">
-      <h2>Csipőfájdalomról</h2>
       <p>A csípőízületi porckopás (artrózis) gyakori betegség.</p>        
       <p>Kezdetben csak a reggeli felkelés után érez a beteg fájdalmat, mely mozgásra bejáratódik és enyhül. Később már terhelésre fokozódnak a fájdalmak és állandósulnak egész napra. A fájdalom jelentkezhet a csípőben, a lágyékhajlatban, de felléphet a keresztcsont tájékán és akár a térdbe is lesugározhat. A fájdalom miatt a betegek életvitelükben is akadályozottá válnak, lépcsőn járásnál, vagy a tömegközlekedési eszközre való felszállásnál. Később azonban már egy cipő felhúzása is fájdalmas lehet. </p>
       <h3>A csípőízületi porckopás kialakulásának okai:</h3>
@@ -131,6 +123,27 @@
           </ul>
         <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás esetén, ha a fent említettek nem hoznak javulást, akkor csípő protézis beültetése javasolt.</p>
     </div>
+    <div class="col-lg-6">
+      <img class="img-fluid rounded mb-4" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
+      <div class="open-contact">
+        <div>
+          <h2 class="open-hours">RENDELÉSI IDŐ: </h2>
+          <p>7100 Szekszárd, Ybl Miklós utca 3.<br>
+             Csütörtök: 17:00 – 20:00<br>
+             Péntek: 09:00 - 16:00</p>
+        </div>
+        <div>
+          <h2 class="contact-to-me"> Elérhetőségek:</h2>
+          <ul>
+            <li>Név: Dr. Ganczer Péter</li>
+            <li>Telefon: <a href="tel:+36300000000">06-30-000-0000</a></li>
+            <li>E-mail: <a href="mailto:info@drganczer.hu">info@drganczer.hu</a></li>
+          </ul>
+          <p>Az emailon érkező igényeket rövid belül feldolgozzuk és eljuttatjuk önnek válaszunkat. Ha ad nekünk telefonos elérhetőséget, akkor a szükséges egyeztetéseket gyorsabban el tudjuk végezni.</p>
+      </div>        
+    </div>
+      </div>
+    </div>    
   </div>
   <!-- /.row -->
 
