--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -148,15 +149,14 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
       </div>
     </div>
-    <!-- /.row -->
 
+    <!-- /.row -->
     <!-- Team Members -->
     <h2>Szakterületek</h2>
-
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/csipofajdalom.jpg" alt="">
+          <img class="card-img-top" src="pictures/rontgencsipo-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Csipő</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -167,7 +167,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/terd-szorit.jpg" alt="">
+          <img class="card-img-top" src="pictures/rontgenterd-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Térd</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -178,7 +178,7 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100 text-center">
-          <img class="card-img-top" src="pictures/Vall-sulyzo.jpg" alt="">
+          <img class="card-img-top" src="pictures/rontgenvall-300.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Váll</h4>
             <!-- <h6 class="card-subtitle mb-2 text-muted">Position</h6> -->
@@ -190,8 +190,33 @@
     </div>
     <!-- /.row -->
 
+  <div class="row">
+    <div class="col-lg-4">
+    </div>
+    <div class="col-lg-4">
+        <div class="open-contact">
+          <div>
+            <h2 class="open-hours">RENDELÉSI IDŐ: </h2>
+            <p>7100 Szekszárd, Ybl Miklós utca 3.<br>
+              Csütörtök: 17:00 – 20:00<br>
+              Péntek: 09:00 - 16:00</p>
+          </div>
+          <div>
+            <h2 class="contact-to-me"> Elérhetőségek:</h2>
+            <ul>
+              <li>Név: Dr. Ganczer Péter</li>
+              <li>Telefon: <a href="tel:+36300000000">06-30-000-0000</a></li>
+              <li>E-mail: <a href="mailto:info@drganczer.hu">info@drganczer.hu</a></li>
+            </ul>
+            <p>Az emailon érkező igényeket rövid belül feldolgozzuk és eljuttatjuk önnek válaszunkat. Ha ad nekünk telefonos elérhetőséget, akkor a szükséges egyeztetéseket gyorsabban el tudjuk végezni.</p>
+        </div>        
+      </div>
 
-  </div>
+      <div class="col-lg-4">
+      </div>
+    </div>   
+  </div>   
+  </div>  
   
   <!-- /.container -->
   <!-- Footer -->
