--- a/index.html
+++ b/index.html
@@ -140,13 +140,18 @@
     <!-- Intro Content -->
     <div class="row">
       <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
+        <p><a href="bemutatkozas.html">
+          <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter.jpg" alt="Dr. Ganczer Péter">
+        </a></p>  
       </div>
       <div class="col-lg-6">
         <h2>Bemutatkozás</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+        <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok, kiemelt területemen a <strong>térd, csípő és vállsebészet</strong> szakértőjeként.</p>
+        <p>Fontosnak tartom az új technológiák, innovációk bevezetését és alkalmazását szakterületemen, mellyel <strong>célom, hogy megkönnyítsem a betegek gyógyulását és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong> A szekszárdi kórház ortopédiai osztályának, <strong>részlegvezető főorvosaként</strong> elsőként végeztünk arthroscopos elülső anatómiai keresztszalag pótlást, vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. 2019. novemberétől pedig térdprotézis beütetéseket is végzünk.  </p>
+        <p>Olyan számítógépes tervezőprogram segítségével, <strong>mellyel jobb eredményt és hosszabb protézis élettartamot tudunk elérni.</strong> </p>
+       </div>
+      <div class="col-lg-12">
+        <p><strong>A korábbi 80 %-os műtéti eredményességet így 95%-ra tudjuk tervezni.</strong> Térd és csípő protézis beültetést <strong>minimál invazív technikával</strong> végzünk. Így a <strong>kórházban töltött idő jelentősen lerövidül</strong>, betegeink gyorsabb rehabilitációs időre számíthatnak, <strong>jóval korábban térhetnek vissza munkájukhoz.</strong> </p>
       </div>
     </div>
 
@@ -189,51 +194,43 @@
       </div>
     </div>
     <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4">
-    </div>
-    <div class="col-lg-4">
-        <div class="open-contact">
-          <div>
-            <h2 class="open-hours">RENDELÉSI IDŐ: </h2>
-            <p>7100 Szekszárd, Ybl Miklós utca 3.<br>
-              Csütörtök: 17:00 – 20:00<br>
-              Péntek: 09:00 - 16:00</p>
-          </div>
-          <div>
-            <h2 class="contact-to-me"> Elérhetőségek:</h2>
-            <ul>
-              <li>Név: Dr. Ganczer Péter</li>
-              <li>Telefon: <a href="tel:+36300000000">06-30-000-0000</a></li>
-              <li>E-mail: <a href="mailto:info@drganczer.hu">info@drganczer.hu</a></li>
-            </ul>
-            <p>Az emailon érkező igényeket rövid belül feldolgozzuk és eljuttatjuk önnek válaszunkat. Ha ad nekünk telefonos elérhetőséget, akkor a szükséges egyeztetéseket gyorsabban el tudjuk végezni.</p>
-        </div>        
+  
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Magánrendeléseim</h2>
+      </div>
+      <div class="col-lg-4">
+              <h3 class="open-hours">Szekszárd </h3>
+              <p>Subrosa Egészség Centrum, Szekszárd, Kadarka u. 72<br>
+                2020. október 1-jétől <br>
+                minden páros héten hétfőn  16.00–20.00 óráig <br>
+                minden pénteken 13.00–17.00 óráig <br>
+              </p>
       </div>
 
       <div class="col-lg-4">
-        <h1>My First Google Map</h1>
-
-<div id="googleMap" style="width:100%;height:400px;"></div>
-
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
+        <h3 class="open-hours">Baja </h3>
+        <p>Baja, Alkotmány u. 1.<br>
+          minden kedden 16.00-21.00 óráig<br>
+        </p>
+      </div> 
+      <div class="col-lg-4">
+          <h3 class="open-hours">Paks </h3>
+          <p>Paks, Váczi Mihály u. 1.<br>
+            minden páratlan hét hétfőn 16.00-21.00 óráig<br>
+          </p>        
       </div>
-    </div>   
-  </div>   
-  </div>  
+      <div class="col-lg-12">
+        <h2>Közfinanszírozott rendelések</h2>
+        <p>Tolna megyei Balassa János Kórházban van pénteki napokon délelőtt. Kórházi időpontkérés telefonon a: 74/501-500/181 melléken.</p>
+      </div>
+    </div>
+    <!-- /.row -->
   
+  </div>  
   <!-- /.container -->
+  
+  
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
@@ -246,6 +243,7 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
 
 </body>
 
