--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -97,7 +97,7 @@
   <div class="container">
 
     <!-- Page Heading/Breadcrumbs -->
-    <h1 class="mt-4 mb-3">Csipőfájdalomról
+    <h1 class="mt-4 mb-3">Bemutatkozás
       <small></small>
     </h1>
   </div>    
@@ -109,41 +109,23 @@
   <div class="row">
 
     <div class="col-lg-6">
-      <p>A csípőízületi porckopás (artrózis) gyakori betegség.</p>        
-      <p>Kezdetben csak a reggeli felkelés után érez a beteg fájdalmat, mely mozgásra bejáratódik és enyhül. Később már terhelésre fokozódnak a fájdalmak és állandósulnak egész napra. A fájdalom jelentkezhet a csípőben, a lágyékhajlatban, de felléphet a keresztcsont tájékán és akár a térdbe is lesugározhat. A fájdalom miatt a betegek életvitelükben is akadályozottá válnak, lépcsőn járásnál, vagy a tömegközlekedési eszközre való felszállásnál. Később azonban már egy cipő felhúzása is fájdalmas lehet. </p>
-      <h3>A csípőízületi porckopás kialakulásának okai:</h3>
-      <p>Nem mindig tudjuk pontosan megállapítani, hogy mi váltotta ki a csípőízületi kopást, de számos olyan tényező ismert, mely a porckopást előidézője lehet:</p>
-          <ul>
-            <li>a mozgásszervi túlterhelés</li>
-            <li>autoimmun ízületi gyulladás</li>
-            <li>a túlsúly</li>
-            <li>a túlzásba vitt sportolás</li>
-            <li>csípőízület veleszületett vagy fejlődési zavarai</li>
-            <li>gyerekkori és serdülőkori combfej betegségek</li>
-          </ul>
-        <p>Csípőízületi kopás kezelésére a korai szakaszában a kiváltó okot kezeljük. Gyulladáscsökkentő gyógyszerek vagy szteroid gyulladáscsökkentő injekció használatával, melyet közvetlenül az ízületbe adunk be.  A folyamat előrehaladásával fájdalom-csillapító gyógyszeres kezelés, fizioterápiás (gyógytorna) kezelés csökkentheti a panaszokat, de a folyamat hosszú távon sajnos nem állítható meg. Előrehaladott csípőízületi porckopás esetén, ha a fent említettek nem hoznak javulást, akkor csípő protézis beültetése javasolt.</p>
+      <p>Dr. Ganczer Péter ortopéd-traumatológus szakorvos vagyok. 20 éve dolgozom szakterületemen, mely elsősorban <strong>térd</strong> /Primer és revisios protézis beültetés, elülső anatómiai szalagpótlás/, <strong>csípő</strong> /minimál invazív protézis beültetés, revisios műtétek/ és <strong>vállsebészet</strong> /arthroscopos Bankart műtét, arthroscopos rotátor köpeny rekonstrukció/. </p>
+      <p>A Pécsi Orvostudományi Egyetemen szereztem diplomát 2000-ben. Innen kerültem a Tolna Megyei Balassa János Kórház ortopédiai osztályára, ahol kilenc évet töltöttem. Majd újabb kilenc évet a baleseti sebészeti osztályon dolgoztam. Emellett lehetőségem volt Bonyhádon és Pakson 1 napos sebészeti tevékenységet végeznem. <strong>2019. év eleje óta a szekszárdi ortopédia, részlegvezető főorvosi teendőit látom el.</strong> </p>
+      <p>Eddigi pályám során mindig vonzottak az új technológiák, innovációk bevezetése, mellyel <strong>célom, hogy a betegek gyógyulását megkönnyítsük és hosszú távon eredményesebb legyen egy-egy beavatkozás.</strong> Ennek megfelelően a szekszárdi kórházban elsőként végeztünk arthroscopos elülső anatómiai keresztszalag pótlást, vállficamot követő arthroscopos Bankart műtétet, arthroscopos rotátor köpeny rekonstrukciót. </p>
     </div>
     <div class="col-lg-6">
-      <img class="img-fluid rounded mb-4" src="pictures/csipofajdalom.jpg" alt="Csipőfájdalomról">
-      <div class="open-contact">
-        <div>
-          <h2 class="open-hours">RENDELÉSI IDŐK: </h2>
-          <p><strong>Szekszárd</strong>, Kadarka u. 72 <br>
-            2020. október 1-jétől <br>
-            minden páros héten hétfőn  16.00–20.00 óráig <br>
-            minden pénteken 13.00–17.00 óráig</p>
-             
-        </div>
-        <div>
-          <h2 class="contact-to-me"> Elérhetőségek:</h2>
-          <ul>
-            <li>Név: Dr. Ganczer Péter</li>
-            <li>Telefon: <a href="tel:+36300000000">06-30-000-0000</a></li>
-            <li>E-mail: <a href="mailto:info@drganczer.hu">info@drganczer.hu</a></li>
-          </ul>
-          <p>Az emailon érkező igényeket rövid belül feldolgozzuk és eljuttatjuk önnek válaszunkat. Ha ad nekünk telefonos elérhetőséget, akkor a szükséges egyeztetéseket gyorsabban el tudjuk végezni.</p>
-      </div>        
+      <img class="img-fluid rounded mb-4" src="pictures/dr-ganczer-peter.jpg" alt="Csipőfájdalomról">
     </div>
+
+    <div class="col-lg-12">
+      <p>2019. novemberétől pedig, a megyei kórházak közül elsőként osztályunkon végzünk térdprotézis beütetéseket, hosszú alsó végtagi RTG alapján. Olyan számítógépes tervezőprogram segítségével végezzük, mellyel pontosabb beültetést, jobb eredményt és hosszabb protézis élettartamot tudunk elérni. </p>
+      <p><strong>A korábbi 80 %-os műtéti eredményességet így 95%-ra tudjuk tervezni.</strong> Amennyiben a beteg anatómiai adottságai lehetővé teszik a protézis beültetést <strong>minimál invazív technikával</strong> végezzük mind csípő /minimál invazív elülső/, mind térd /mini midvastus, subvastus feltárás/ esetében. Így <strong>a kórházban töltött idő jelentősen lerövidül</strong>, betegeink gyorsabb rehabilitációs időre számíthatnak, jóval korábban térhetnek vissza életükhöz/munkájukhoz. </p>
+      <p><strong>Magán műtéteimet a budapesti Emineo magánklinikán végzem</strong>, ahol a fentieken túl lehetőség van térdprotézis beültetésnél az egyéni, MR alapján készült sablonnal történő protézis beültetésre, illetve csípőprotézis esetében a mozgásanalízisen alapuló beültetésre, melyek még jobb eredményt biztosítanak. </p>
+      <h2>Tagságok/képzések:</h2>
+      <p>A Magyar Ortopéd Társaság tagja vagyok. </p>
+      <p>A hazai kongresszusok mellett rendszeresen veszek részt külföldi kongresszusokon és tanulmányutakon: AO Recon kurzusok, ausztriai Stolzalpei Klinikán térdkurzusok.</p>
+    </div>
+
       </div>
     </div>    
   </div>
